# cortex-lite

./: .env.example  .gitignore  README.md  pyproject.toml
cortex_lite/: __init__.py  chunker.py  cli.py  db.py  embeddings.py  search.py
examples/: agent_memory.py  quickstart.py
