[project]
name = "cortex-lite"
version = "0.1.0"
description = "Lightweight cognitive memory for AI agents. Zero-config, SQLite-backed, embeds locally."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Atanasio Juarez", email = "ajuarez@aterna.ai" }]
keywords = ["memory", "ai", "agents", "embeddings", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.24",
    "httpx>=0.27",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
voyage = ["voyageai>=0.0.3"]
all = ["openai>=1.0", "voyageai>=0.0.3"]

[project.scripts]
cortex-lite = "cortex_lite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
